--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "weather-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.13.2"
+  },
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
